Try and fix overlapping margin issue

--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400');
 
 article {
-    margin: auto;
+    margin-left: 30%;
     max-width: 60%;
 }
 
